# mitre-attack-navigator

./: .gitignore  .gitmodules  README.md  angular.json  attack-navigator.desktop  get-attack-navigator.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
.github/workflows/: deploy.yml
redirects/enterprise/: index.html
redirects/mobile/: index.html
src/: styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.scss  app.component.ts
src/app/datatable/: data-table.component.html  data-table.component.scss  data-table.component.ts
src/app/help/: help.component.ts
src/app/matrix/matrix-side/: matrix-side.component.scss
src/app/matrix/technique-cell/: technique-cell.component.html  technique-cell.component.ts
src/app/matrix/technique-cell/contextmenu/: contextmenu.component.html  contextmenu.component.scss  contextmenu.component.ts
src/app/search-and-multiselect/: search-and-multiselect.component.scss
src/app/services/: data.service.spec.ts  sync.service.ts
src/app/svg-export/: svg-export.component.html
src/app/tabs/: tabs.component.html  tabs.component.scss  tabs.component.spec.ts  tabs.component.ts
src/app/utils/: utils.ts
src/assets/: config.json
src/assets/css/: style-attack.css
